Sun Nov 16 17:06:29 GMT 2003  Colin Watson  <cjwatson@debian.org>

	Style cleanups; no functional changes.

	* src/whatis.c (usage, match, apropos, search, main): Add a space
	  before the open parenthesis in several function calls.
	  (apropos): The nesting level has got out of control here. Use a
	  goto and a 'nextpage' label near the end of the loop instead.

Sun Nov 16 15:49:12 GMT 2003  Erik Andersen  <andersen@codepoet.org>

	* src/straycats.c (check_for_stray): Add missing open brace to
	  non-HAVE_CANONICALIZE_FILE_NAME case.

Tue Oct 28 16:24:41 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Create new th* variables with capitalized
	  variants of program names for .TH lines.
	* man/de_DE.88591/man1/*.man1, man/de_DE.88591/man5/*.man5,
	  man/de_DE.88591/man8/*.man8, man/es_ES.88591/man1/*.man1,
	  man/es_ES.88591/man5/*.man5, man/es_ES.88591/man8/*.man8,
	  man/it_IT.88591/man1/*.man1, man/it_IT.88591/man5/*.man5,
	  man/it_IT.88591/man8/*.man8, man/ja_JP.eucJP/man1/*.man1,
	  man/ja_JP.eucJP/man5/*.man5, man/ja_JP.eucJP/man8/*.man8,
	  man/man1/*.man1, man/man5/*.man5, man/man8/*.man8: Capitalize all
	  page titles in .TH lines.
	* man/de_DE.88591/man5/manpath.man5: Fix typo: 'man' => 'manpath'.

Sun Sep 28 20:11:55 BST 2003  Colin Watson  <cjwatson@debian.org>

	* man-db.gnu: Remove. This is licensed under the GFDL, whose
	  freeness is under serious question. I'm not sure if the FSF
	  actually have standing to claim copyright over this file in the
	  first place, but it doesn't need to be in CVS here so I don't feel
	  like arguing about it.

Sun Sep 21 02:17:43 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Dump pipeline in debugging mode.

Sun Sep 21 02:15:17 BST 2003  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Add a forgotten entry for 2.4.2.

Sat Sep 20 18:35:54 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Galician -> ISO-8859-1,